# ytb-summarizer

./: .gitignore  build.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
ytb_gui/: __init__.py  config.py  history_panel.py  home_page.py  input_panel.py  main_window.py  preview_panel.py  progress_panel.py  settings_page.py  style.py  template_editor.py  worker.py
ytb_summarizer/: __init__.py  output.py  summarizer.py  templates.py  transcript.py  utils.py
